# iwatch_app

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
assets/: tailwind.css
script/: tailwindcss_cli.sh
src/: backend.rs  frontend.rs  main.rs
src/backend/: ble.rs
src/frontend/: dock.rs  nav_bar.rs  page.rs  route.rs
src/frontend/page/: active.rs  debug.rs  device.rs  nf404.rs  profile.rs
